Add/Change: functionality explanation / free results from, remove controls collapsible

--- a/src/index.html
+++ b/src/index.html
@@ -33,177 +33,167 @@
       </div>
     </section>
 
-    <section id="stage" class="row">
+    <section id="controls" class="row">
       <div class="col s12 offset-m1 m10 offset-l2 l8 center-align">
-        <ul class="collapsible" collapsible-non-interactive>
+        <div class="card valign-wrapper">
+          <div class="input-field">
+            <span class="prefix">@</span>
+            <input
+              id="screenName"
+              type="text"
+              autocomplete="username"
+              required
+              pattern="^(?!@)([A-Za-z0-9_]){1,15}$"
+              data-position="bottom"
+              data-tooltip="Please provide a valid Twitter @handle!"
+              maxlength="15"
+            >
+            <label for="screenName">Username</label>
+          </div>
+          <div>
+            <button id="check" class="waves-effect waves white btn btn-flat">Check</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="results" class="row">
+      <div class="col s12 offset-m1 m10 offset-l2 l8 center-align">
+        <ul id="tasks" class="collapsible">
           <li>
-            <div class="collapsible-header valign-wrapper controls">
-              <div class="input-field">
-                <span class="prefix">@</span>
-                <input
-                  id="screenName"
-                  type="text"
-                  autocomplete="username"
-                  required
-                  pattern="^(?!@)([A-Za-z0-9_]){1,15}$"
-                  data-position="bottom"
-                  data-tooltip="Please provide a valid Twitter @handle!"
-                  maxlength="15"
-                >
-                <label for="screenName">Username</label>
-              </div>
-              <div>
-                <button id="check" class="waves-effect waves white btn btn-flat">Check</button>
+            <div class="collapsible-header" data-task-id="checkUser" collapsible-non-interactive>
+              <i class="material-icons notranslate"></i>
+              <div class="task-message">
+                <span>Test Results</span>
               </div>
             </div>
-            <div class="collapsible-body results">
-              <ul id="tasks" class="collapsible popout">
+          </li>
+          <li>
+            <div class="collapsible-header" data-task-id="checkSearch">
+              <i class="material-icons notranslate">contact_support</i>
+              <div class="task-message">
+                <span>Search Ban</span>
+              </div>
+            </div>
+            <div class="collapsible-body left-align">
+              <h5>Search Ban</h5>
+              <p>
+                This type of ban causes your tweets to be hidden from the search results
+                entirely, no matter whether the quality filter is turned on or off.
+                This behavior includes hashtags as well. This type of ban seems to be
+                temporally limited for active accounts.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header" data-task-id="checkConventional">
+              <i class="material-icons notranslate">contact_support</i>
+              <div class="task-message">
+                <span>Thread Ban</span>
+              </div>
+            </div>
+            <div class="collapsible-body left-align">
+              <h5>Thread Ban</h5>
+              <p>
+                This is what is referred to as conventional shadowban as well. It comprises a
+                search ban while threads are completely ripped apart by hiding reply tweets
+                of the affected user to others. Everything will look perfectly normal to the
+                affected user but many others will not be able to see reply tweets of the
+                affected user at all. Reasons for this ban include behavior like excessive
+                tweeting or following. Again, this type of ban seems to be temporally limited
+                for active accounts.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header" data-task-id="checkRefTweet">
+              <i class="material-icons notranslate">contact_support</i>
+              <div class="task-message">
+                <span>QFD</span>
+              </div>
+            </div>
+            <div class="collapsible-body left-align">
+              <h5>Quality Filter Discrimination</h5>
+              <p>
+                QFD causes your tweets to be invisible within the latest section of the
+                search, including hashtags, when the quality filter is turned on. Note that
+                this quality filter is located on the search page, is turned on by default
+                and will be reset for each search anew. It differs from the quality filter
+                controlling your notifications. QFD was introduced on May 15, 2018 as part of
+                Twitter's so-called <a href="https://blog.twitter.com/official/en_us/topics/product/2018/Serving_Healthy_Conversation.html">healthy conversation project</a>.
+              </p>
+              <ul id="qfdFAQ" class="collapsible">
                 <li>
-                  <div class="collapsible-header" data-task-id="checkUser" collapsible-non-interactive>
-                    <i class="material-icons gears notranslate"></i>
-                    <div class="task-message">
-                      <span>...</span>
-                    </div>
+                  <div class="collapsible-header">
+                    <span>Does turning off the quality filter within my notification settings help?</span>
                   </div>
-                </li>
-                <li>
-                  <div class="collapsible-header" data-task-id="checkSearch">
-                    <i class="material-icons notranslate">access_time</i>
-                    <div class="task-message">
-                      <span>Waiting for user.</span>
-                    </div>
-                    <div class="description-indicator">
-                      <i class="material-icons notranslate">contact_support</i>
-                    </div>
-                  </div>
-                  <div class="collapsible-body left-align">
-                    <h5>Search Ban</h5>
+                  <div class="collapsible-body">
                     <p>
-                      This type of ban causes your tweets to be hidden from the search results
-                      entirely, no matter whether the quality filter is turned on or off.
-                      This behavior includes hashtags as well. This type of ban seems to be
-                      temporally limited for active accounts.
+                      The quality filter within your notification settings only controls the
+                      notification you receive. Turning it off is recommended and will cause you
+                      to see more notifications which you would not have received otherwise.
+                      However, turning it off will not cause your own tweets to be more visible.
                     </p>
                   </div>
                 </li>
                 <li>
-                  <div class="collapsible-header" data-task-id="checkConventional">
-                    <i class="material-icons notranslate">access_time</i>
-                    <div class="task-message">
-                      <span>Waiting for user.</span>
-                    </div>
-                    <div class="description-indicator">
-                      <i class="material-icons notranslate">contact_support</i>
-                    </div>
+                  <div class="collapsible-header">
+                    <span>How do I get into the QFD ban?</span>
                   </div>
-                  <div class="collapsible-body left-align">
-                    <h5>Thread Ban</h5>
+                  <div class="collapsible-body">
                     <p>
-                      This is what is referred to as conventional shadowban as well. It comprises a
-                      search ban while threads are completely ripped apart by hiding reply tweets
-                      of the affected user to others. Everything will look perfectly normal to the
-                      affected user but many others will not be able to see reply tweets of the
-                      affected user at all. Reasons for this ban include behavior like excessive
-                      tweeting or following. Again, this type of ban seems to be temporally limited
-                      for active accounts.
+                      A lot of interaction with accounts affected by QFD will likely cause your
+                      account to be affected by QFD soon, too. The absence of personal misbehavior
+                      does not guarantee an account to be unaffected.
                     </p>
                   </div>
                 </li>
                 <li>
-                  <div class="collapsible-header" data-task-id="checkRefTweet">
-                    <i class="material-icons notranslate">access_time</i>
-                    <div class="task-message">
-                      <span>Waiting for user.</span>
-                    </div>
-                    <div class="description-indicator">
-                      <i class="material-icons notranslate">contact_support</i>
-                    </div>
+                  <div class="collapsible-header">
+                    <span>How do I get out of the QFD ban?</span>
                   </div>
-                  <div class="collapsible-body left-align">
-                    <h5>QFD</h5>
+                  <div class="collapsible-body">
                     <p>
-                      QFD causes your tweets to be invisible within the latest section of the
-                      search, including hashtags, when the quality filter is turned on. Note that
-                      this quality filter is located on the search page, is turned on by default
-                      and will be reset for each search anew. It differs from the quality filter
-                      controlling your notifications. QFD was introduced on 15 May 2018 as part of
-                      Twitter's so-called <a href="https://blog.twitter.com/official/en_us/topics/product/2018/Serving_Healthy_Conversation.html">healthy conversation project</a>.
+                      Several German Twitter users that were affected by QFD have been
+                      experimenting with an Arabic follow-back botnet.
+                      The botnet generated a lot of followers for those who followed some
+                      accounts from this botnet. By accumulating many new followers that were not
+                      affected by QFD, at least 30 accounts were able to escape this type of ban.
+                      This is a strong hint that guilt by association is a major concept of the
+                      classifying algorithm.
                     </p>
-                    <ul id="qfdFAQ" class="collapsible">
-                      <li>
-                        <div class="collapsible-header">
-                          <span>Does turning off the quality filter within my notification settings help?</span>
-                        </div>
-                        <div class="collapsible-body">
-                          <p>
-                            The quality filter within your notification settings only controls the
-                            notification you receive. Turning it off is recommended and will cause you
-                            to see more notifications which you would not have received otherwise.
-                            However, turning it off will not cause your own tweets to be more visible.
-                          </p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="collapsible-header">
-                          <span>How do I get into the QFD ban?</span>
-                        </div>
-                        <div class="collapsible-body">
-                          <p>
-                            A lot of interaction with accounts affected by QFD will likely cause your
-                            account to be affected by QFD soon, too. The absence of personal misbehavior
-                            does not guarantee an account to be unaffected.
-                          </p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="collapsible-header">
-                          <span>How do I get out of the QFD ban?</span>
-                        </div>
-                        <div class="collapsible-body">
-                          <p>
-                            Several German Twitter users that were affected by QFD have been
-                            experimenting with an Arabic follow-back botnet.
-                            The botnet generated a lot of followers for those who followed some
-                            accounts from this botnet. By accumulating many new followers that were not
-                            affected by QFD, at least 30 accounts were able to escape this type of ban.
-                            This is a strong hint that guilt by association is a major concept of the
-                            classifying algorithm.
-                          </p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="collapsible-header">
-                          <span>Is there a political bias?</span>
-                        </div>
-                        <div class="collapsible-body">
-                          <p>
-                            The quality filter indeed seems to mainly affect conservative and right-wing
-                            accounts. Testing over 2,000 contacts of two German left-wing extremist
-                            accounts did not yield a single account affected by QFD that would not be
-                            considered politically right. Testing 509 Twitter accounts from German
-                            members of Parliament yielded 14 affected accounts. All of them belong to
-                            the AfD, which is a German right-wing party.
-                          </p>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="collapsible-header">
-                          <span>Does it only affect hashtags and the search? Why is it so bad then?</span>
-                        </div>
-                        <div class="collapsible-body">
-                          <p>
-                            We cannot tell whether the effects of QFD are limited to hashtags and the
-                            search. These are only the symptoms making the ban visible to us. It shows
-                            that Twitter is capable and willing to discriminate accounts with certain
-                            political opinions. Since shadowbanning is a very unethical way to silence
-                            people already, it is possible for Twitter to apply methods that are harder
-                            to detect. Think of more subtle ways of banning by limiting the share of
-                            followers who a user's tweets are shown to. This would be a censorship
-                            method that could only be detected collectively by their followers.
-                          </p>
-                        </div>
-                      </li>
-                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <div class="collapsible-header">
+                    <span>Is there a political bias?</span>
+                  </div>
+                  <div class="collapsible-body">
+                    <p>
+                      The quality filter indeed seems to mainly affect conservative and right-wing
+                      accounts. Testing over 2,000 contacts of two German left-wing extremist
+                      accounts did not yield a single account affected by QFD that would not be
+                      considered politically right. Testing 509 Twitter accounts from German
+                      members of Parliament yielded 14 affected accounts. All of them belong to
+                      the AfD, which is a German right-wing party.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="collapsible-header">
+                    <span>Does it only affect hashtags and the search? Why is it so bad then?</span>
+                  </div>
+                  <div class="collapsible-body">
+                    <p>
+                      We cannot tell whether the effects of QFD are limited to hashtags and the
+                      search. These are only the symptoms making the ban visible to us. It shows
+                      that Twitter is capable and willing to discriminate accounts with certain
+                      political opinions. Since shadowbanning is a very unethical way to silence
+                      people already, it is possible for Twitter to apply methods that are harder
+                      to detect. Think of more subtle ways of banning by limiting the share of
+                      followers who a user's tweets are shown to. This would be a censorship
+                      method that could only be detected collectively by their followers.
+                    </p>
                   </div>
                 </li>
               </ul>
@@ -215,13 +205,13 @@
 
     <section class="row">
       <div class="col s12 offset-m1 m10 offset-l2 l8">
-        <ul id="functionality" class="collapsible">
+        <ul id="functionality" class="collapsible popout">
           <li>
             <div class="collapsible-header valign-wrapper">
               How This Test Works
             </div>
             <div class="collapsible-body results">
-              <h5>Search ban</h5>
+              <h5>Search Ban</h5>
               <p>
                 The Twitter search features several search modifiers. One of them is the prefix from:
                 which allows to search for tweets from a specific user. For example, when checking
@@ -229,7 +219,7 @@
                 the quality filter disabled. If we do not find any tweets although the user has
                 tweeted in the past, the account is subject to a search ban.
               </p>
-              <h5>Thread shadowban</h5>
+              <h5>Thread Ban</h5>
               <p>
                 When the user has a search ban, the tester searches their profile for the latest
                 tweet with at least one reply. It then visits the direct URL of the tweet and
