Add: name-X call to action

--- a/src/index.html
+++ b/src/index.html
@@ -207,10 +207,29 @@
       <div class="col s12 offset-m1 m10 offset-l2 l8">
         <ul id="functionality" class="collapsible popout">
           <li>
-            <div class="collapsible-header valign-wrapper">
-              How This Test Works
+            <div class="collapsible-header">
+              Can I Help?
             </div>
-            <div class="collapsible-body results">
+            <div class="collapsible-body">
+              <h5>Why yes! Thanks for asking!</h5>
+              <p>
+                If you are affected by the QFD, you can help us spread awareness about Twitter's
+                censorship.<br />
+                Many affected users have included a red
+                <img class="emoji" src="https://assets-cdn.github.com/images/icons/emoji/unicode/274c.png" />
+                in their Twitter name.<br />
+                Not only as a personal statement, but also to show how many censored users there are.
+              </p>
+              <p>
+                You can copy the symbol from here: <code>❌</code>
+              </p>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              How Does This Tester Work?
+            </div>
+            <div class="collapsible-body">
               <h5>Search Ban</h5>
               <p>
                 The Twitter search features several search modifiers. One of them is the prefix from:
