Fix: style.css path

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="vendor/materialize/css/materialize{{useMinified}}.css"  media="screen,projection"/>
     <!-- Custom -->
-    <link rel="stylesheet" type="text/css" href="css/style-{{bundleVersion}}.css">
+    <link rel="stylesheet" type="text/css" href="css/{{bundleVersion}}/style.css">
   </head>
   <body>
     <section class="row header section">
