--- a/src/index.html
+++ b/src/index.html
@@ -343,7 +343,8 @@
       <div class="row">
         <div class="col s12">
           PLEASE NOTE: The "quality filter" option in the <i>notification settings</i> does
-          <b>not</b> increase the visibility of your own tweets.
+          <b>not</b> increase the visibility of your own tweets nor
+          does it disable the quality filter for search results.
         </div>
       </div>
       <div class="row">
