Refactor/Chore: modulazrize TechInfo / lint

--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,8 @@
                 This behavior includes hashtags as well. This type of ban seems to be
                 temporally limited for active accounts.
               </p>
-              <ul id="searchFAQ" class="collapsible techInfo">
-                <li>
+              <ul id="searchFAQ" class="collapsible hide">
+                <li class="techInfo">
                   <div class="collapsible-header">
                     <span>Technical information about the result</span>
                   </div>
@@ -114,8 +114,8 @@
                 tweeting or following. Again, this type of ban seems to be temporally limited
                 for active accounts.
               </p>
-              <ul id="threadFAQ" class="collapsible techInfo">
-                <li>
+              <ul id="threadFAQ" class="collapsible hide">
+                <li class="techInfo">
                   <div class="collapsible-header">
                     <span>Technical information about the result</span>
                   </div>
@@ -218,7 +218,7 @@
                     </p>
                   </div>
                 </li>
-                <li class="techInfo">
+                <li class="techInfo hide">
                   <div class="collapsible-header">
                     <span>Technical information about the result</span>
                   </div>
