Fix shortlink info (citing instead of retweeting)

--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
               </p>
               <h5>QFD</h5>
               <p>
-                When you upload an image, re-tweet or link to an external page, Twitter generates
+                When you upload an image, cite a tweet or link to an external page, Twitter generates
                 a shortlink for that content.
               </p>
               <p>
