--- a/src/index.html
+++ b/src/index.html
@@ -209,7 +209,7 @@
                     <p>
                       We cannot tell whether the effects of QFD are limited to hashtags and the
                       search. These are only the symptoms making the ban visible to us. It shows
-                      that Twitter is capable and willing to discriminate accounts with certain
+                      that Twitter is capable and willing to discriminate against accounts with certain
                       political opinions. Since shadowbanning is a very unethical way to silence
                       people already, it is possible for Twitter to apply methods that are harder
                       to detect. Think of more subtle ways of banning by limiting the share of
