Change: change qf sample links depending on availability of touch feature, +
  ... assuming that touch enabled devices are mobile devices.
      Not entireyly accurate, but gotta do for now.

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
               type="text"
               autocomplete="username"
               required
-              pattern="^(?!@)([A-Za-z0-9_]){1,15}$"
+              pattern="^[A-Za-z0-9_]{1,15}$"
               data-position="bottom"
               data-tooltip="Please provide a valid Twitter @handle!"
               maxlength="15"
