Fix: donation-modal wording

--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,7 @@
           <i>“Knowledge is in every country the surest basis of public happiness.”</i>
         </p>
         <p>
-          We hope to have brought you some clearance about what is going on with your Twitter account.
+          We hope to have brought you some clarity about what is going on with your Twitter account.
           If you feel like supporting us, you can do so by donating to our PayPal.
         </p>
         <h6>
@@ -380,20 +380,21 @@
           <li>
             <i class="material-icons notranslate">search</i>
             <span>
-              us to look further into other ways Twitter has implemented to lower your reach
+              us to look further into other ways Twitter has implemented to lower your reach,
             </span>
           </li>
           <li>
             <i class="material-icons notranslate">build</i>
             <span>
               the development of this site and an API to test multiple accounts at the same time
+              or all of your followers,
             </span>
           </li>
           <li>
             <i class="material-icons notranslate">extension</i>
             <span>
-              the development of TwitterNinja, a browser extension that, for example,
-              disables the quality filter for you.
+              the development of TwitterNinja, a browser extension that disables the quality filter
+              for you.
             </span>
           </li>
         </ul>
