Add search suggestion ban

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,14 @@
             </div>
           </li>
           <li>
+            <div class="collapsible-header" data-task-id="checkSuggest" collapsible-non-interactive>
+              <i class="material-icons notranslate"></i>
+              <div class="task-message">
+                <span>Search Suggestion Ban</span>
+              </div>
+            </div>
+          </li>
+          <li>
             <div class="collapsible-header" data-task-id="checkSearch">
               <i class="material-icons notranslate">contact_support</i>
               <div class="task-message">
