Add search suggestion ban description

--- a/src/index.html
+++ b/src/index.html
@@ -70,11 +70,19 @@
             </div>
           </li>
           <li>
-            <div class="collapsible-header" data-task-id="checkSuggest" collapsible-non-interactive>
-              <i class="material-icons notranslate"></i>
+            <div class="collapsible-header" data-task-id="checkSuggest">
+              <i class="material-icons notranslate">contact_support</i>
               <div class="task-message">
                 <span>Search Suggestion Ban</span>
               </div>
+            </div>
+            <div class="collapsible-body left-align">
+              <h5>Search Suggestion Ban</h5>
+              <p>
+                This type of ban causes your account to not populate search suggestions
+                and people search results when you search for it while being logged out.
+                Twitter seems to take <a href="https://en.wikipedia.org/wiki/Social_network_analysis#Distributions" target="_blank">user distance</a> into account. While an account may be suggested to users with a small degree of separation, it may not show up for users with a larger degree of separation.
+              </p>
             </div>
           </li>
           <li>
