--- a/src/index.html
+++ b/src/index.html
@@ -79,9 +79,9 @@
             <div class="collapsible-body left-align">
               <h5>Search Suggestion Ban</h5>
               <p>
-                This type of ban causes your account to not populate search suggestions
-                and people search results when you search for it while being logged out.
-                Twitter seems to take <a href="https://en.wikipedia.org/wiki/Social_network_analysis#Distributions" target="_blank">user distance</a> into account. While an account may be suggested to users with a small degree of separation, it may not show up for users with a larger degree of separation.
+                This type of ban causes an account to not populate search suggestions
+                and people search results when it is searched for while being logged out.
+                Twitter seems to take <a href="https://en.wikipedia.org/wiki/Social_network_analysis#Metrics" target="_blank">tie strength</a> or a similar metric into account. While an account may be suggested to users you are strongly tied to, it may not be shown to others.
               </p>
             </div>
           </li>
