Mention another effect of search ban
It's effectively also a notification ban. Confirmed that this happens with a user who is search banned but not thread banned.

--- a/src/index.html
+++ b/src/index.html
@@ -97,8 +97,10 @@
               <p>
                 This type of ban causes your tweets to be hidden from the search results
                 entirely, no matter whether the quality filter is turned on or off.
-                This behavior includes hashtags as well. This type of ban seems to be
-                temporally limited for active accounts.
+                This behavior includes hashtags as well. It also means your replies
+                (and other actions such as likes and retweets) won't show up in the
+                notifications of other users, even if you follow each other.
+                This type of ban seems to be temporally limited for active accounts.
               </p>
               <ul id="searchFAQ" class="collapsible hide">
                 <li class="techInfo">
