--- a/src/index.html
+++ b/src/index.html
@@ -144,23 +144,59 @@
               </ul>
             </div>
           </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="row">
+      <div class="col s12 offset-m1 m10 offset-l2 l8">
+        <ul id="functionality" class="collapsible popout">
           <li>
-            <div class="collapsible-header" data-task-id="checkRefTweet">
-              <i class="material-icons notranslate">contact_support</i>
-              <div class="task-message">
-                <span>QFD</span>
-              </div>
+            <div class="collapsible-header">
+              But Twitter claims that they do not shadowban
             </div>
-            <div class="collapsible-body left-align">
+            <div class="collapsible-body">
+              In a <a href="https://blog.twitter.com/en_us/topics/company/2018/Setting-the-record-straight-on-shadow-banning.html">blog post from July 2018</a>,
+              Twitter claims that they do not shadowban by defining shadowbanning as
+              <i>deliberately making someone’s content undiscoverable to everyone except the person who posted it, unbeknownst to the original poster</i>.
+              If you strictly follow Twitter's own definition, this may not be false because the key is discoverability. Later, Twitter provides a hint why
+              this definition is deceptive by stating that you are
+              <i>always able to see the tweets from accounts you follow (although you may have to do more work to find them, like go directly to their profile)</i>.
+              The problem is obvious: Having to do more work to find tweets of accounts is not shadowbanning if you let Twitter define it. Although tweets within a thread
+              may be completely invisible to others or tweets may not be shown in a user's followers' timelines, you will always be able to find those tweets by navigating
+              to the user's "Tweets &amp; replies" section on their profile. In contrast to Twitter, we find that this is shadowbanning because without navigating there, it
+              is not even possible for others to know that the corresponding tweets do exist.
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header">
+              Why is the QFD test gone?
+            </div>
+            <div class="collapsible-body">
               <h5>Quality Filter Discrimination</h5>
               <p>
-                QFD causes your tweets to be invisible within the latest section of the
-                search, including hashtags, when the quality filter is turned on. Note that
-                this quality filter is located on the search page, is turned on by default
-                and will be reset for each search anew. It differs from the quality filter
-                controlling your notifications. QFD was introduced on May 15, 2018 as part of
+                QFD caused your tweets to be invisible within the latest section of the
+                search, including hashtags, when the quality filter on the search page was turned on.
+                The filter was turned on by default
+                and would reset for each search anew. QFD was introduced on May 15, 2018 as part of
                 Twitter's so-called <a href="https://blog.twitter.com/official/en_us/topics/product/2018/Serving_Healthy_Conversation.html">healthy conversation project</a>.
               </p>
+              <p>
+                The quality filter was deprecated shortly before Twitter CEO Jack Dorsey
+                <a href="https://docs.house.gov/meetings/IF/IF00/20180905/108642/HHRG-115-IF00-Wstate-DorseyJ-20180905.pdf">testified before the United States House Committee on Energy and Commerce</a>.
+                In his testimony, Dorsey stated the following:<br/>
+                <i>Twitter recently made a change to how one of our behavior based algorithms works in
+                search results. When people used search, our algorithms were filtering out those that had a higher
+                likelihood of being abusive from the “Lastest" tab by default. Those search results were visible
+                in “Latest” if someone turned off the quality filter in search, and they were also in Top search
+                and elsewhere throughout the product. Twitter decided that a higher level of precision is needed
+                when filtering to ensure these accounts are included in “Latest” by default. Twitter therefore
+                turned off the algorithm. As always, we will continue to refine our approach and will be
+                transparent about why we make the decisions that we do.</i><br/>
+                Currently, the quality filter seems to have no effect indeed. But please note that this is not a verification
+                that users are not classified anymore by this algorithm. We just cannot observe it anymore through the quality filter.
+              </p>
+              <p>For documentation purposes, you still find the frequently answered questions about QFD here:</p>
               <ul id="qfdFAQ" class="collapsible">
                 <li>
                   <div class="collapsible-header">
@@ -235,47 +271,12 @@
                     </p>
                   </div>
                 </li>
-                <li class="techInfo hide">
-                  <div class="collapsible-header">
-                    <span>Technical information about the result</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p class="techContent">
-                    </p>
-                  </div>
-                </li>
               </ul>
             </div>
           </li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="row">
-      <div class="col s12 offset-m1 m10 offset-l2 l8">
-        <ul id="functionality" class="collapsible popout">
           <li>
             <div class="collapsible-header">
-              Can I Help?
-            </div>
-            <div class="collapsible-body">
-              <h5>Why yes! Thanks for asking!</h5>
-              <p>
-                If you are affected by the QFD, you can help us spread awareness about Twitter's
-                censorship.<br />
-                Many affected users have included a red
-                <img class="emoji" src="https://assets-cdn.github.com/images/icons/emoji/unicode/274c.png" />
-                in their Twitter name.<br />
-                Not only as a personal statement, but also to show how many censored users there are.
-              </p>
-              <p>
-                You can copy the symbol from here: <code>❌</code>
-              </p>
-            </div>
-          </li>
-          <li>
-            <div class="collapsible-header">
-              How Does This Tester Work?
+              How does this tester work?
             </div>
             <div class="collapsible-body">
               <h5>Search Ban</h5>
@@ -301,7 +302,7 @@
                 If the tweet that the user replied to is not visible, the likelihood that the
                 account is affected by a thread shadowban is very high.
               </p>
-              <h5>QFD</h5>
+              <h5>QFD (deprectated)</h5>
               <p>
                 When you upload an image, cite a tweet or link to an external page, Twitter generates
                 a shortlink for that content.
@@ -352,16 +353,15 @@
           <br />
           No cookies, no tracking, screw NetzDG and GDPR!
           <br />
-          <a href="https://twitter.com/Netzdenunziant" target="_blank">@Netzdenunziant</a> (research), <a href="https://twitter.com/raphaelbeerlin" target="_blank">@raphaelbeerlin</a> (implementation)
+          Made in Germany by <a href="https://twitter.com/Netzdenunziant" target="_blank">@Netzdenunziant</a> and <a href="https://twitter.com/raphaelbeerlin" target="_blank">@raphaelbeerlin</a>
         </div>
       </div>
     </footer>
     <div id="qf-setting-toast-template" class="hide">
       <div class="row">
         <div class="col s12">
-          PLEASE NOTE: The "quality filter" option in the <i>notification settings</i> does
-          <b>not</b> increase the visibility of your own tweets nor
-          does it disable the quality filter for search results.
+          PLEASE NOTE: We can only detect the presence of specific bans or deboosting methods, not their absence. There may be others
+          which we do not know or cannot easily test for.
         </div>
       </div>
       <div class="row">
@@ -369,9 +369,6 @@
           <button
             class="btn-flat toast-action"
             onClick="ui.qfSettingToastDimsmiss();">OK</button>
-          <button
-            class="btn-flat toast-action"
-            onClick="ui.qfSettingToastShowMore();">MORE</button>
         </div>
       </div>
     </div>
