Add nginx proxy support

--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
             <div class="collapsible-body left-align">
               <h5>Thread Ban</h5>
               <p>
-                This is what is referred to as conventional shadowban as well. It comprises a
+                This is what is referred to as conventional shadowban or ghost banning as well. It comprises a
                 search ban while threads are completely ripped apart by hiding reply tweets
                 of the affected user to others. Everything will look perfectly normal to the
                 affected user but many others will not be able to see reply tweets of the
