--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,38 @@
               </ul>
             </div>
           </li>
+	  <li>
+            <div class="collapsible-header" data-task-id="checkBarrier">
+              <i class="material-icons notranslate">contact_support</i>
+              <div class="task-message">
+                <span>Reply Deboosting</span>
+              </div>
+            </div>
+            <div class="collapsible-body left-align">
+              <h5>Reply Deboosting</h5>
+              <p>
+	        If Twitter's signals determine that an account might engage in harmful behavior,
+		Twitter hides their replies behind a barrier and only loads them when "Show more
+		replies" is clicked. This behavior is personalized, i.e. Twitter does not hide
+		the tweets of accounts you follow. We therefore use an unbiased reference account
+		without followings in order to determine whether tweets within a thread can be
+		retrieved without clicking "Show more replies" from its view.<br/>
+		In some cases, Twitter classifies accounts to be offensive. In this case,replies
+		are hidden behind a second barrier within the "Show more replies" section.
+              </p>
+              <ul id="barrierFAQ" class="collapsible hide">
+                <li class="techInfo">
+                  <div class="collapsible-header">
+                    <span>Technical information about the result</span>
+                  </div>
+                  <div class="collapsible-body">
+                    <p class="techContent">
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
