--- a/src/index.html
+++ b/src/index.html
@@ -55,131 +55,7 @@
 
     <section id="results" class="row">
       <div class="col s12 offset-m1 m10 offset-l2 l8 center-align">
-        <ul id="tasks" class="collapsible">
-          <li>
-            <div class="collapsible-header" data-task-id="checkUser" collapsible-non-interactive>
-              <i class="material-icons notranslate"></i>
-              <div class="task-message">
-                <span>Test Results</span>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="collapsible-header" data-task-id="checkSuggest">
-              <i class="material-icons notranslate">contact_support</i>
-              <div class="task-message">
-                <span>Search Suggestion Ban</span>
-              </div>
-            </div>
-            <div class="collapsible-body left-align">
-              <h5>Search Suggestion Ban</h5>
-              <p>
-                This type of ban causes an account to not populate search suggestions
-                and people search results when it is searched for while being logged out.
-                Twitter seems to take <a href="https://en.wikipedia.org/wiki/Social_network_analysis#Metrics" target="_blank">tie strength</a> or a similar metric into account. While an account may be suggested to users you are strongly tied to, it may not be shown to others.
-              </p>
-            </div>
-          </li>
-          <li>
-            <div class="collapsible-header" data-task-id="checkSearch">
-              <i class="material-icons notranslate">contact_support</i>
-              <div class="task-message">
-                <span>Search Ban</span>
-              </div>
-            </div>
-            <div class="collapsible-body left-align">
-              <h5>Search Ban</h5>
-              <p>
-                This type of ban causes your tweets to be hidden from the search results
-                entirely, no matter whether the quality filter is turned on or off.
-                This behavior includes hashtags as well. This type of ban seems to be
-                temporally limited for active accounts.
-              </p>
-              <ul id="searchFAQ" class="collapsible hide">
-                <li class="techInfo">
-                  <div class="collapsible-header">
-                    <span>Technical information about the result</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p class="techContent">
-                    </p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <div class="collapsible-header" data-task-id="checkConventional">
-              <i class="material-icons notranslate">contact_support</i>
-              <div class="task-message">
-                <span>Ghost Ban</span>
-              </div>
-            </div>
-            <div class="collapsible-body left-align">
-              <h5>Ghost Ban</h5>
-              <p>
-                This is what is referred to as conventional shadowban or thread banning as well. It comprises a
-                search ban while threads are completely ripped apart by hiding reply tweets
-                of the affected user to others. Everything will look perfectly normal to the
-                affected user but many others will not be able to see reply tweets of the
-                affected user at all. Reasons for this ban include behavior like excessive
-                tweeting or following. Again, this type of ban seems to be temporally limited
-                for active accounts.
-              </p>
-              <ul id="threadFAQ" class="collapsible hide">
-                <li class="techInfo">
-                  <div class="collapsible-header">
-                    <span>Technical information about the result</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p class="techContent">
-                    </p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </li>
-	  <li>
-            <div class="collapsible-header" data-task-id="checkBarrier">
-              <i class="material-icons notranslate">contact_support</i>
-              <div class="task-message">
-                <span>Reply Deboosting</span>
-              </div>
-            </div>
-            <div class="collapsible-body left-align">
-              <h5>Reply Deboosting</h5>
-              <p>
-	        If Twitter's signals determine that an account might engage in harmful behavior,
-		Twitter hides their replies behind a barrier and only loads them when "Show more
-		replies" is clicked. This behavior is personalized, i.e. Twitter does not hide
-		the tweets of accounts you follow. We therefore use an unbiased reference account
-		without followings in order to determine whether tweets within a thread can be
-		retrieved without clicking "Show more replies" from its view.<br/>
-		In some cases, Twitter classifies tweets or accounts in a way that their tweets
-		show up within the section for offensive replies. In this case, replies
-		are hidden behind a second barrier within the "Show more replies" section.<br/>
-		The outcome of this test may depend on the conversation which we found one of
-		your tweets in. For testing, we take your latest reply tweet that is not within a
-		conversation you started. Note that test results are cached for a short period of
-		time.<br/>
-		A failure to test is neither a positive nor a negative test result. This test relies
-		on some conditions that are not fulfilled by all accounts. In some cases, we cannot
-		test for purely technical reasons.
-              </p>
-              <ul id="barrierFAQ" class="collapsible hide">
-                <li class="techInfo">
-                  <div class="collapsible-header">
-                    <span>Technical information about the result</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p class="techContent">
-                    </p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+        <ul id="tasks" class="collapsible"></ul>
       </div>
     </section>
 
@@ -392,6 +268,37 @@
         </div>
       </div>
     </footer>
+    <div id="task-item-template" class="hide">
+      <li>
+        <div class="collapsible-header" data-task-id="NOTICE--{{task.id}}--ME" data-task-component="header">
+          <i class="material-icons notranslate" data-task-component="icon"><!-- task.icon --></i>
+          <div class="task-message" data-task-component="message">
+            <span><!-- task.message --></span>
+          </div>
+        </div>
+        <!-- remove, if !task.description -->
+        <div class="collapsible-body left-align" data-task-component="description">
+          <h5><!-- task.description.title --></h5>
+          <p>
+            <!-- task.description.text -->
+          </p>
+          <!-- remove, if !task.faq -->
+          <ul id="threadFAQ" class="collapsible hide" data-task-component="faq">
+            <li class="techInfo">
+              <div class="collapsible-header">
+                <span>Technical information about the result</span>
+              </div>
+              <div class="collapsible-body">
+                <p class="techContent">
+                </p>
+              </div>
+            </li>
+          </ul>
+          <!-- !task.faq -->
+        </div>
+        <!-- !task.description -->
+      </li>
+    </div>
     <div id="qf-setting-toast-template" class="hide">
       <div class="row">
         <div class="col s12">
