--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     <meta name="twitter:image:alt" content="shadwoban.eu">
     <base target="_blank" href="<%= htmlWebpackPlugin.options.baseHref %>">
 
+    <link rel="prefetch" href="./img/gears.svg" />
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import Fonts-->
