--- a/src/index.html
+++ b/src/index.html
@@ -112,13 +112,13 @@
             <div class="collapsible-header" data-task-id="checkConventional">
               <i class="material-icons notranslate">contact_support</i>
               <div class="task-message">
-                <span>Thread Ban</span>
+                <span>Ghost Ban</span>
               </div>
             </div>
             <div class="collapsible-body left-align">
-              <h5>Thread Ban</h5>
+              <h5>Ghost Ban</h5>
               <p>
-                This is what is referred to as conventional shadowban or ghost banning as well. It comprises a
+                This is what is referred to as conventional shadowban or thread banning as well. It comprises a
                 search ban while threads are completely ripped apart by hiding reply tweets
                 of the affected user to others. Everything will look perfectly normal to the
                 affected user but many others will not be able to see reply tweets of the
@@ -139,7 +139,7 @@
               </ul>
             </div>
           </li>
-	  <li>
+	  <li style="display: none;">
             <div class="collapsible-header" data-task-id="checkBarrier">
               <i class="material-icons notranslate">contact_support</i>
               <div class="task-message">
@@ -155,8 +155,12 @@
 		the tweets of accounts you follow. We therefore use an unbiased reference account
 		without followings in order to determine whether tweets within a thread can be
 		retrieved without clicking "Show more replies" from its view.<br/>
-		In some cases, Twitter classifies accounts to be offensive. In this case, replies
-		are hidden behind a second barrier within the "Show more replies" section.
+		In some cases, Twitter classifies accounts as offensive. In this case, replies
+		are hidden behind a second barrier within the "Show more replies" section.<br/>
+		The outcome of this test may depend on the conversation which we found one of 
+		your tweets in. For testing, we take your latest reply tweet that is not within a
+		conversation you started. Note that test results are cached for a short period of
+		time.
               </p>
               <ul id="barrierFAQ" class="collapsible hide">
                 <li class="techInfo">
