--- a/src/index.html
+++ b/src/index.html
@@ -278,14 +278,17 @@
             <span><!-- task.message --></span>
           </div>
         </div>
-        <!-- remove, if !task.description -->
+        <!-- remove, if !task.description (yes, both nodes!)-->
+        <div class="result-hint" data-task-component="result-hint">
+          Click/Tap for more information!
+        </div>
         <div class="collapsible-body left-align" data-task-component="description">
           <h5><!-- task.description.title --></h5>
           <p>
             <!-- task.description.text -->
           </p>
           <!-- remove, if !task.faq -->
-          <ul id="threadFAQ" class="collapsible hide" data-task-component="faq">
+          <ul id="NOTICE--{{task.faq.id}}--ME" class="collapsible hide" data-task-component="faq">
             <li class="techInfo">
               <div class="collapsible-header">
                 <span>Technical information about the result</span>
