Change: rename task-component result-hint -> hint

--- a/src/index.html
+++ b/src/index.html
@@ -279,7 +279,7 @@
           </div>
         </div>
         <!-- remove, if !task.description (yes, both nodes!)-->
-        <div class="result-hint" data-task-component="result-hint">
+        <div class="result-hint" data-task-component="hint">
           Click/Tap for more information!
         </div>
         <div class="collapsible-body left-align" data-task-component="description">
