Change: move data-task-id, -status to wrapping <li> +
  Makes it easier with CSS selectors, not having to
  address a parent element when looking for .active state.

  Also just makes more sense to have the whole collapsible
  refered to as one task, not just its header Element.

--- a/src/index.html
+++ b/src/index.html
@@ -271,8 +271,8 @@
       </div>
     </footer>
     <div id="task-item-template" class="hide">
-      <li>
-        <div class="collapsible-header" data-task-id="NOTICE--{{task.id}}--ME" data-task-component="header">
+      <li data-task-id="NOTICE--{{task.id}}--ME">
+        <div class="collapsible-header" data-task-component="header">
           <i class="material-icons notranslate" data-task-component="icon"><!-- task.icon --></i>
           <div class="task-message" data-task-component="message">
             <span><!-- task.message --></span>
