--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
               </ul>
             </div>
           </li>
-	  <li style="display: none;">
+	  <li>
             <div class="collapsible-header" data-task-id="checkBarrier">
               <i class="material-icons notranslate">contact_support</i>
               <div class="task-message">
@@ -155,7 +155,8 @@
 		the tweets of accounts you follow. We therefore use an unbiased reference account
 		without followings in order to determine whether tweets within a thread can be
 		retrieved without clicking "Show more replies" from its view.<br/>
-		In some cases, Twitter classifies accounts as offensive. In this case, replies
+		In some cases, Twitter classifies tweets or accounts in a way that their tweets
+		show up within the section for offensive replies. In this case, replies
 		are hidden behind a second barrier within the "Show more replies" section.<br/>
 		The outcome of this test may depend on the conversation which we found one of 
 		your tweets in. For testing, we take your latest reply tweet that is not within a
