Add test failure explanation

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,10 @@
 		The outcome of this test may depend on the conversation which we found one of 
 		your tweets in. For testing, we take your latest reply tweet that is not within a
 		conversation you started. Note that test results are cached for a short period of
-		time.
+		time.<br/>
+		A failure to test is neither a positive nor a negative test result. This test relies
+		on some conditions that are not fulfilled by all accounts. In some cases, we cannot
+		test for purely technical reasons.
               </p>
               <ul id="barrierFAQ" class="collapsible hide">
                 <li class="techInfo">
