--- a/src/index.html
+++ b/src/index.html
@@ -277,11 +277,14 @@
           <div class="task-message" data-task-component="message">
             <span><!-- task.message --></span>
           </div>
+          <!-- remove, if !task.description -->
+          <div class="result-hint" data-task-component="hint">
+            <i class="material-icons">info</i>
+            <i class="material-icons">arrow_drop_down</i>
+          </div>
+          <!-- !task.description -->
         </div>
-        <!-- remove, if !task.description (yes, both nodes!)-->
-        <div class="result-hint" data-task-component="hint">
-          Click/Tap for more information!
-        </div>
+        <!-- remove, if !task.description -->
         <div class="collapsible-body left-align" data-task-component="description">
           <h5><!-- task.description.title --></h5>
           <p>
