--- a/src/index.html
+++ b/src/index.html
@@ -280,7 +280,7 @@
           <!-- remove, if !task.description -->
           <div class="result-hint" data-task-component="hint">
             <i class="material-icons">info</i>
-            <i class="material-icons">arrow_drop_down</i>
+            <i class="material-icons active-indicator">arrow_drop_down</i>
           </div>
           <!-- !task.description -->
         </div>
